# TestTemperature

./: CMakeLists.txt
inc/: temperature.h
src/: CMakeLists.txt  main.cpp  temperature.cpp
yocto-recipe/test-temperature/: test-temperature_0.1.bb
